--- a/src/CruiseBundle/Resources/views/Order/invoice.html.twig
+++ b/src/CruiseBundle/Resources/views/Order/invoice.html.twig
@@ -370,7 +370,7 @@
 
 
 
-{{ form_row(form.submit, {'label':'Сохранить', 'attr':{'class':'btn btn-primary'}}) }}
+{{ form_row(form.submit, {'label':'Сохранить', 'attr':{'class':'btn btn-primary custom'}}) }}
 
 {{ form_end(form) }}
 
