--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,7 +15,7 @@
 
 
 {% stylesheets 
-output="css/styles.css" 
+output="css/styles2.css" 
 
 'css/bootstrap.min.css'  
 'css/bootstrap-slider.css' 
@@ -24,7 +24,7 @@ output="css/styles.css"
 
 filter='yui_css'
   %}
-    <link rel="stylesheet" href="{{ asset_url }}" />
+    <link rel="stylesheet" href="{{ asset_url }}?123" />
 {% endstylesheets %}
 
 </head>
@@ -287,7 +287,7 @@ filter='yui_css'
 
 
 <!-- Yandex.Metrika counter -->
-<script type="text/javascript">
+<script type="text/javascript" >
     (function (d, w, c) {
         (w[c] = w[c] || []).push(function() {
             try {
@@ -295,7 +295,8 @@ filter='yui_css'
                     id:36501512,
                     clickmap:true,
                     trackLinks:true,
-                    accurateTrackBounce:true
+                    accurateTrackBounce:true,
+                    webvisor:true
                 });
             } catch(e) { }
         });
@@ -312,8 +313,12 @@ filter='yui_css'
         } else { f(); }
     })(document, window, "yandex_metrika_callbacks");
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/36501512" style="position:absolute; left:-9999px;" alt="яндекс счётчик" /></div></noscript>
+<noscript><div><img src="https://mc.yandex.ru/watch/36501512" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+
+
+
+
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -348,7 +353,7 @@ filter='yui_css'
 	
 	
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>	
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="{{ asset('js/bootstrap.min.js') }}"></script>
 
@@ -379,7 +384,8 @@ output="js/js.js"
 	
 {% block javascript %}
 {% endblock %}
-<script async type="text/javascript" src="/web/bundles/ivoryckeditor/ckeditor.js"></script>	
+<script async type="text/javascript" src="/web/bundles/ivoryckeditor/ckeditor.js"></script>
+	<script async type="text/javascript" src="{{ asset('js/main.js') }}"></script>
 
 </body>{% endspaceless %}
 
