--- a/src/BaseBundle/Resources/views/Page/index.html.twig
+++ b/src/BaseBundle/Resources/views/Page/index.html.twig
@@ -22,7 +22,26 @@
         <div class="carousel-inner">
 
 			
+        
+			
             <div class="item active">
+					<a href="/specialoffers/sale">
+						<img src="{{asset('images/slider/slide-10.jpg')}}" alt="">
+					</a>
+                <div class="carousel-caption">
+                    
+                </div>
+            </div>	
+            <div class="item">
+					<a href="/specialoffers/sale">
+						<img src="{{asset('images/slider/slide-9.jpg')}}" alt="">
+					</a>
+                <div class="carousel-caption">
+                    
+                </div>
+            </div>	
+			
+            <div class="item">
 					<a href="/specialoffers/happy">
 						<img src="{{asset('images/slider/slide-8.jpg')}}" alt="">
 					</a>
@@ -53,14 +72,14 @@
 			
 			
 	
-            <div class="item ">
+    <!--         <div class="item ">
 					<a href="/ships/kuchkin">
 						<img src="{{asset('images/slider/slide-3.png')}}" alt="">
 					</a>
                 <div class="carousel-caption">
                     
                 </div>
-            </div>		
+            </div>	 -->	
 
         </div>
         <!-- Controls -->
