--- a/src/ManagerBundle/Resources/views/ReportAgency/index.html.twig
+++ b/src/ManagerBundle/Resources/views/ReportAgency/index.html.twig
@@ -2,7 +2,10 @@
 
 {% block body %}
 
-<script src="{{asset('/admin/js/develplatform.editable.select.js')}}"></script>
+{#<script src="{{asset('/admin/js/develplatform.editable.select.js')}}"></script>#}
+<script src="{{asset('/admin/js/jquery-editable-select.js')}}"></script>
+<link rel="stylesheet" href="{{asset('/admin/css/jquery-editable-select.css')}}">
+
 
 {{ form_start(form) }}
 
@@ -36,7 +39,7 @@
 {% block javascriptsready %}
 
 	$('#reportSalesAgencyMonth').click(function(){
-		agency_id = $('#form_agency option:selected').val();
+		agency_id = $('#form_agency').attr('data-val');
 		date_month = $('#form_date_month option:selected').val();
 		date_year = $('#form_date_year option:selected').val();
 		url = "{{path('manager_agency_report_sales')}}" + "?agency_id=" + agency_id + "&date_year=" + date_year + "&date_month=" + date_month + '&buyer=agency';
@@ -68,7 +71,7 @@
 	});
 	
 	$('#report').click(function(){
-		agency_id = $('#form_agency option:selected').val();
+		agency_id = $('#form_agency').attr('data-val');
 		date_month = $('#form_date_month option:selected').val();
 		date_year = $('#form_date_year option:selected').val();
 		url = "{{path('manager_agency_report')}}" + "?agency_id=" + agency_id + "&date_year=" + date_year + "&date_month=" + date_month;
@@ -76,7 +79,7 @@
 	});
 	
 	$('#act').click(function(){
-		agency_id = $('#form_agency option:selected').val();
+		agency_id = $('#form_agency').attr('data-val');
 		date_month = $('#form_date_month option:selected').val();
 		date_year = $('#form_date_year option:selected').val();
 		url = "{{path('manager_agency_act')}}" + "?agency_id=" + agency_id + "&date_year=" + date_year + "&date_month=" + date_month;
