Разделение на 2019 год

--- a/src/CruiseBundle/Resources/views/Order/orders.html.twig
+++ b/src/CruiseBundle/Resources/views/Order/orders.html.twig
@@ -22,6 +22,9 @@
 		
 <div class="col-sm-2">
 {{ form_row(formOrder.order) }}	
+</div>			
+<div class="col-sm-2">
+{{ form_row(formOrder.year) }}	
 </div>	
 
 
