--- a/src/ManagerBundle/Resources/views/Manager/invoices.html.twig
+++ b/src/ManagerBundle/Resources/views/Manager/invoices.html.twig
@@ -23,8 +23,15 @@
 </div>	
 
 <div class="col-sm-2">
-{{ form_row(form.del) }}	
+{{ form_row(form.count) }}	
+</div>
+<div class="col-sm-2">
+{{ form_row(form.year) }}	
 </div>	
+<div class="col-sm-2">
+{{ form_row(form.del) }}	
+</div>
+
 
 <div class="col-sm-2">
 {{ form_row(form.submit) }}	
