Не выводить начатые круизы

--- a/src/BaseBundle/Resources/views/Page/index.html.twig
+++ b/src/BaseBundle/Resources/views/Page/index.html.twig
@@ -23,8 +23,17 @@
 
 			
         
+			<div class="item active">
+					<a href="/cruise_2019">
+						<img src="{{asset('images/slider/slide-12.jpg')}}" alt="">
+					</a>
+                <div class="carousel-caption">
+                    
+                </div>
+            </div>
 			
-            <div class="item active">
+			
+            <div class="item">
 					<a href="/specialoffers/sale">
 						<img src="{{asset('images/slider/slide-10.jpg')}}" alt="">
 					</a>
@@ -32,6 +41,9 @@
                     
                 </div>
             </div>	
+			
+			
+			
             <div class="item">
 					<a href="/specialoffers/sale">
 						<img src="{{asset('images/slider/slide-9.jpg')}}" alt="">
